--- a/src/Components/CustomerArea/CustomerCard/CustomerCard.css
+++ b/src/Components/CustomerArea/CustomerCard/CustomerCard.css
@@ -5,30 +5,30 @@
     border-radius: 8px;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
-  
-    &:hover {
-      transform: scale(1.05);
-    }
-  }
-  
-  .CustomerCard .bottom-right-button-block {
+}
+
+.CustomerCard:hover {
+    transform: scale(1.05);
+}
+
+.CustomerCard .bottom-right-button-block {
     display: flex;
     justify-content: flex-end;
-  }
-  
-  .CustomerCard a {
+}
+
+.CustomerCard a {
     text-decoration: none;
     color: black;
-  }
-  
-  .CustomerCard a.right-button {
+}
+
+.CustomerCard a.right-button {
     margin-right: 10px;
     padding: 8px 12px;
     background-color: #f1f1f1;
     border-radius: 4px;
     transition: background-color 0.3s ease-in-out;
-  
-    &:hover {
-      background-color: #d4d4d4;
-    }
-  }
+}
+
+.CustomerCard a.right-button:hover {
+    background-color: #d4d4d4;
+}
